--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "./node_modules/.bin/eslint . --fix"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "cql-exec-fhir": "^1.3.0",
     "cql-exec-vsac": "^1.0.3",
     "cql-execution": "^1.3.7",
